[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/UI/opening_screens.gd" type="Script" id=1]
[ext_resource path="res://resources/art/opening_screens/help_dev_and_everything_will_come_together.png" type="Texture" id=2]
[ext_resource path="res://resources/art/opening_screens/NFTStab.jpg" type="Texture" id=3]
[ext_resource path="res://resources/ui_themes/main_menu.tres" type="Theme" id=4]
[ext_resource path="res://resources/art/opening_screens/loadscreen_1_godot.png" type="Texture" id=5]
[ext_resource path="res://resources/art/opening_screens/gpl_artboard_1.png" type="Texture" id=6]

[node name="OpeningScreens" type="Control"]
rect_min_size = Vector2( 1024, 600 )
theme = ExtResource( 4 )
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 1024, 600 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Winners" type="TextureButton" parent="CenterContainer"]
margin_left = 448.0
margin_top = 240.0
margin_right = 1472.0
margin_bottom = 840.0
rect_min_size = Vector2( 1024, 600 )
texture_normal = ExtResource( 3 )
expand = true

[node name="Help" type="TextureButton" parent="CenterContainer"]
margin_left = 448.0
margin_top = 240.0
margin_right = 1472.0
margin_bottom = 840.0
rect_min_size = Vector2( 1024, 600 )
texture_normal = ExtResource( 2 )
expand = true

[node name="GPL" type="TextureButton" parent="CenterContainer"]
margin_left = 448.0
margin_top = 240.0
margin_right = 1472.0
margin_bottom = 840.0
rect_min_size = Vector2( 1024, 600 )
texture_normal = ExtResource( 6 )
expand = true

[node name="MadeWithGodot" type="TextureButton" parent="CenterContainer"]
margin_left = 448.0
margin_top = 240.0
margin_right = 1472.0
margin_bottom = 840.0
rect_min_size = Vector2( 1024, 600 )
texture_normal = ExtResource( 5 )
expand = true

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="pressed" from="CenterContainer/Winners" to="." method="_on_Winners_pressed"]
[connection signal="pressed" from="CenterContainer/Help" to="." method="_on_Help_pressed"]
[connection signal="pressed" from="CenterContainer/GPL" to="." method="_on_GPL_pressed"]
[connection signal="pressed" from="CenterContainer/MadeWithGodot" to="." method="_on_MadeWithGodot_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
